# django-celery-sqs

./: .gitignore  LICENSE  README.md  README.rst  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
celerysqs/: celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
celerysqs/conf/: aws.py  base.py
scripts/: curls.sh
